--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,31 @@ ol {
 .address-link:focus {
   color: #404bbf;
 }
+.section-one {
+  width: 1440px;
+  height: 600px;
+  background-color: #2e2f42;
+}
+.text-section-one {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+}
+.button-order {
+
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.button-order:hover,
+.button-order:focus {
+  color: #404bbf;}
+
+.button-order:cursor { pointer; }
