--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,6 @@ ol {
   color: #404bbf;
 }
 .section-one {
-  /* width: 1440px; */
-  /* height: 600px; */
   background-color: #2e2f42;
 }
 .text-section-one {
@@ -72,4 +70,26 @@ ol {
 .button-order:hover,
 .button-order:focus {
   background-color: #404bbf;
+}
+
+.section-two-strategy,
+.section-two-punctuality,
+.section-two-technologies,
+.section-two-diligence {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.section-two-onep,
+.section-two-twop,
+.section-two-threep,
+.section-two-fourp {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
