--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ ol {
   background-color: #404bbf;
 }
 
-.section-two-all {
+.section-three-all {
   background-color: #ffffff;
 }
 .section-two-p {
