--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ ol {
   background-color: #2e2f42;
 }
 .footer-title {
+  font-family: "Raleway", sans-serif;
   ont-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
@@ -158,6 +159,7 @@ ol {
   color: #4d5ae5;
 }
 .Studio {
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
