--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ ol {
 }
 .section-four-tooldis {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
@@ -151,9 +151,9 @@ ol {
 }
 .footer-title {
   font-family: "Raleway", sans-serif;
-  ont-weight: 700;
+  font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -162,7 +162,7 @@ ol {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
