--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,8 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .footer {
   background-color: #2e2f42;
@@ -158,7 +160,7 @@ ol {
   text-transform: uppercase;
   color: #4d5ae5;
 }
-.Studio {
+.footer-studio {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -167,6 +169,7 @@ ol {
   text-transform: uppercase;
   color: #f4f4fd;
 }
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
